@@ -1,17 +1,8 @@
-# Copyright (c) 2007, 2010, 2011, 2012 Godefroid Chapelle
+# Copyright (c) 2007-2015 Godefroid Chapelle
 # 
 # This file is part of ipdb.
-# GNU package is free software: you can redistribute it and/or modify it under
-# the terms of the GNU General Public License as published by the Free 
-# Software Foundation, either version 2 of the License, or (at your option) 
-# any later version.
-#
-# GNU package is distributed in the hope that it will be useful, but 
-# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
-# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
-# for more details.
-
-# You should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses/.
+# Redistributable under the MIT License
+# https://opensource.org/licenses/MIT
 
 from ipdb.__main__ import set_trace, post_mortem, pm, run, runcall, runeval, launch_ipdb_on_exception
 
