@@ -1,15 +1,8 @@
-# Copyright (c) 2007, 2010, 2011, 2012 Godefroid Chapelle
+# Copyright (c) 2007-2015 Godefroid Chapelle
 #
 # This file is part of ipdb.
-# GNU package is free software: you can redistribute it and/or modify it under
-# the terms of the GNU General Public License as published by the Free
-# Software Foundation, either version 2 of the License, or (at your option)
-# any later version.
-#
-# GNU package is distributed in the hope that it will be useful, but
-# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
-# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
-# for more details.
+# Redistributable under the MIT License
+# https://opensource.org/licenses/MIT
 
 from setuptools import setup, find_packages
 from sys import version_info
@@ -45,7 +38,7 @@ setup(name='ipdb',
       author='Godefroid Chapelle',
       author_email='gotcha@bubblenet.be',
       url='https://github.com/gotcha/ipdb',
-      license='GPL',
+      license='MIT',
       packages=find_packages(exclude=['ez_setup', 'examples', 'tests']),
       include_package_data=True,
       zip_safe=True,
